force-app/main/default/objects/AI_RAG_Sync_Job__c/AI_RAG_Sync_Job__c.object-meta.xml
<CustomObject>
    <label>RAG Sync Job</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Job #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAG Sync Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>