force-app/main/default/objects/AI_RAG_Sync_Job__c/fields/AI_RAG_Sync__c.field-meta.xml
<CustomField>
    <fullName>AI_RAG_Sync__c</fullName>
    <label>RAG Sync</label>
    <referenceTo>AI_RAG_Sync__c</referenceTo>
    <relationshipLabel>RAG Sync Jobs</relationshipLabel>
    <relationshipName>AI_RAG_Sync_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>