force-app/main/default/objects/AI_RAG_Sync_Job__c/fields/Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_Id__c</fullName>
    <label>Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>